# fatou

./: .gitattributes  .gitignore  .versionary-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  audit.toml  biome.json  build.rs  deny.toml  devenv.nix  flake.nix  panache.toml  pyproject.toml  versionary.jsonc
.github/workflows/: build-and-test.yml  docs.yml  lint.yml  packages.yml  publish-code-extensions.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml
bench/: cold_start.py  compare_format.sh  julia_bench.jl  merge.py  results.json
bench/corpus/: download.sh
benches/: format_compare.rs
docs/: book.toml
docs/doc-utils/: Cargo.toml
docs/editors/: neovim.md
docs/src/: CNAME  SUMMARY.md  getting-started.md  introduction.md  performance-table.md  performance.md  robots.txt
docs/theme/: bench-charts.css  bench-charts.js
editors/code/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
examples/: canonical.rs  docgen.rs  sitemap.rs
examples/util/: postbuild.rs
npm/fatou/: README.md  package.json
npm/fatou-cli/: README.md  package.json
npm/platform-template/: README.md  package.json
scripts/: generate-logo.jl  harvest-juliasyntax-corpus.jl  update-juliaformatter-corpus.jl  update-juliaformatter-corpus.sh  update-juliasyntax-corpus.jl  update-juliasyntax-corpus.sh  update-runic-corpus.jl  update-runic-corpus.sh
src/: ast.rs  cli.rs  config.rs  environment.rs  file_discovery.rs  formatter.rs  incremental.rs  index.rs  lib.rs  linter.rs  lsp.rs  main.rs  parser.rs  project.rs  resolve.rs  semantic.rs  syntax.rs  text.rs
src/ast/: nodes.rs  tokens.rs  traits.rs
src/formatter/: check.rs  core.rs  ir.rs  printer.rs  rules.rs  style.rs
src/index/: base.rs  harvest.rs  model.rs  typeexpr.rs
src/linter/: check.rs  diagnostic.rs  docs.rs  fix.rs  render.rs  rules.rs  suppression.rs
src/lsp/: analysis_thread.rs  call_hierarchy.rs  code_action.rs  completion.rs  cross_file.rs  definition.rs  document_link.rs  folding.rs  format.rs  graph_diagnostics.rs  hover.rs  lint.rs  pull_diagnostics.rs  read_jobs.rs  references.rs  rename.rs  render.rs  selection.rs  semantic_tokens.rs  server.rs  signature_help.rs  state.rs  symbols.rs  task_pool.rs  type_hierarchy.rs  uri.rs  workspace_symbols.rs
src/parser/: context.rs  core.rs  cursor.rs  diagnostics.rs  events.rs  expr.rs  lexer.rs  recovery.rs  sexpr.rs  structural.rs  tree_builder.rs  unicode_ops.rs
src/semantic/: binding.rs  builder.rs  import.rs  scope.rs  signature.rs
src/text/: edit.rs  line_index.rs
tests/: autofix.rs  base_index.rs  environment.rs  formatter.rs  harvest.rs  juliaformatter_oracle.rs  juliasyntax_oracle.rs  library_index.rs  line_endings.rs  linter_rules.rs  lsp.rs  parser_snapshots.rs  range_format.rs  resolve.rs  rule_docs.rs  runic_oracle.rs  salsa_incremental.rs
tests/oracle/: allowlist.txt  blocked.txt  juliaformatter-allowlist.txt  juliaformatter-blocked.txt  juliasyntax-allowlist.txt  runic-allowlist.txt  runic-blocked.txt
tests/snapshots/: parser_snapshots__abstract_primitive_type.snap  parser_snapshots__ampersand_operator.snap  parser_snapshots__anon_function_signature.snap  parser_snapshots__anonymous_functions.snap  parser_snapshots__arithmetic_chains.snap  parser_snapshots__array_line_continuation.snap  parser_snapshots__array_literals.snap  parser_snapshots__array_separator_mismatch.snap  parser_snapshots__array_space_call.snap  parser_snapshots__array_space_unary.snap  parser_snapshots__array_trailing_junk.snap  parser_snapshots__arrow_pipe_bitshift_operators.snap  (+201 more)
(+669 files in other folders)
