[package]
name = "fatou"
version = "0.6.0"
edition = "2024"
readme = "README.md"
description = "A language server, formatter, and linter for Julia"
license = "MIT"
repository = "https://github.com/jolars/fatou"
authors = ["Johan Larsson <johan@jolars.co>"]
keywords = ["julia", "language-server", "formatter", "linter"]
categories = [
  "command-line-utilities",
  "text-processing",
  "parsing",
  "parser-implementations",
]
include = [
  "/src/**/*.rs",
  "/src/**/*.txt",
  "/build.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
]

[lib]
name = "fatou"

[[bin]]
name = "fatou"
path = "src/main.rs"

[dependencies]
annotate-snippets = "0.12.16"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5"
env_logger = "0.11.10"
globset = "0.4.18"
ignore = "0.4.26"
log = { version = "0.4.32", features = ["release_max_level_info"] }
lsp-server = "0.10"
lsp-types = "0.97"
rayon = "1.12"
rowan = "0.16.1"
salsa = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
similar = { version = "3.1.1", features = ["text"] }
smol_str = "0.3"
toml = "1.1.2"

[dev-dependencies]
insta = "1.47.2"

[[bench]]
name = "format_compare"
harness = false

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clapdown = "0.1.0"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
