[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fatou"
description = "A language server, formatter, and linter for Julia"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Johan Larsson", email = "johan@jolars.co" }]
keywords = ["julia", "language-server", "formatter", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jolars/fatou"
Repository = "https://github.com/jolars/fatou"

[tool.maturin]
# Package the existing `fatou` binary (not a Python extension module) as a wheel.
bindings = "bin"
strip = true
